update the overflow bug

--- a/app/assets/stylesheets/modules/_tables.styl
+++ b/app/assets/stylesheets/modules/_tables.styl
@@ -65,6 +65,12 @@
           text-decoration none
           text-align left
           padding 12px 24px
+          overflow-wrap break-word
+          word-wrap break-word
+          word-break break-word
+          hyphens auto
+
+          white-space normal /* Ensures text wraps */
 
       &:first-child td
         border-top 1px solid #ddd
